[profile.release]
panic = 'unwind'

[workspace]
members = [
  'node',
  'runtime/hydradx',
  'pallets/omnipool',
  'pallets/dca',
  'primitives',
  'utils/build-script-utils',
  'integration-tests',
  'pallets/circuit-breaker',
  'pallets/xcm-rate-limiter',
  'pallets/omnipool-liquidity-mining',
  'scraper',
  'traits',
  'pallets/relaychain-info',
  'pallets/route-executor',
  'pallets/transaction-multi-payment',
  'pallets/asset-registry',
  'runtime/adapters',
  'pallets/collator-rewards',
  'pallets/transaction-pause',
  'pallets/ema-oracle',
  'pallets/liquidity-mining',
  'pallets/currencies',
  'pallets/stableswap',
  'utils/test-utils',
  'pallets/dynamic-fees',
  'pallets/duster',
  'pallets/otc',
  'pallets/bonds',
  'pallets/lbp',
  'math',
  'pallets/staking',
  'pallets/democracy',
]

[workspace.dependencies]
hydra-dx-math = { path = "math", default-features = false }
hydradx = { path = "node", default-features = false }
hydradx-traits = { path = "traits", default-features = false }
primitives = { path = "primitives", default-features = false }

hydradx-adapters = { path = "runtime/adapters", default-features = false }
hydradx-runtime = { path = "runtime/hydradx", default-features = false }

pallet-asset-registry = { path = "pallets/asset-registry", default-features = false }
pallet-circuit-breaker = { path = "pallets/circuit-breaker", default-features = false }
pallet-claims = { path = "pallets/claims", default-features = false }
pallet-collator-rewards = { path = "pallets/collator-rewards", default-features = false }
pallet-currencies = { path = "pallets/currencies", default-features = false }
pallet-dca = { path = "pallets/dca", default-features = false }
pallet-duster = { path = "pallets/duster", default-features = false }
pallet-dynamic-fees = { path = "pallets/dynamic-fees", default-features = false }
pallet-ema-oracle = { path = "pallets/ema-oracle", default-features = false }
pallet-genesis-history = { path = "pallets/genesis-history", default-features = false }
pallet-liquidity-mining = { path = "pallets/liquidity-mining", default-features = false }
pallet-nft = { path = "pallets/nft", default-features = false }
pallet-omnipool = { path = "pallets/omnipool", default-features = false }
pallet-omnipool-liquidity-mining = { path = "pallets/omnipool-liquidity-mining", default-features = false }
pallet-otc = { path = "pallets/otc", default-features = false}
pallet-relaychain-info = { path = "pallets/relaychain-info", default-features = false }
pallet-route-executor = { path = "pallets/route-executor", default-features = false }
pallet-stableswap = { path = "pallets/stableswap", default-features = false }
pallet-transaction-multi-payment = { path = "pallets/transaction-multi-payment", default-features = false }
pallet-transaction-pause = { path = "pallets/transaction-pause", default-features = false }
pallet-staking = { path = "pallets/staking", default-features = false }
pallet-democracy= { path = "pallets/democracy", default-features = false }
pallet-xcm-rate-limiter = { path = "pallets/xcm-rate-limiter", default-features = false }
warehouse-liquidity-mining = { package = "pallet-liquidity-mining", path = "pallets/liquidity-mining", default-features = false }
pallet-bonds = { path = "pallets/bonds", default-features = false}
pallet-lbp = { path = "pallets/lbp", default-features = false}

hydra-dx-build-script-utils = { path = "utils/build-script-utils", default-features = false }
scraper = { path = "scraper", default-features = false }
test-utils = { path = "utils/test-utils", default-features = false }

integration-tests = { path = "integration-tests", default-features = false }

# Codec
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12.0", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# Substrate
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# Substrate Pallets
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# ORML dependencies
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }

# orml XCM support
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-xcm = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-collator = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-consensus-relay-chain = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-network = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-client-service = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-primitives-core = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-relay-chain-minimal-node = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
pallet-collator-selection = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }
parachain-info = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38", default-features = false }

# Polkadot dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false, features =  [
  "wasm-api",
]}
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
polkadot-xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }


[patch."https://github.com/paritytech/polkadot"]
kusama-runtime = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
pallet-xcm = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-cli = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-client = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-core-primitives = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-node-core-pvf = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-node-network-protocol = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-node-primitives = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-node-subsystem = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-node-subsystem-util = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-overseer = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-parachain = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-primitives = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-runtime = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-runtime-common = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-runtime-parachains = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-service = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
polkadot-statement-table = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
rococo-runtime = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
westend-runtime = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
xcm = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
xcm-builder = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }
xcm-executor = { git = "https://github.com/galacticcouncil/polkadot", branch = "fix-xcm-executor-atomicity-9-38" }

[patch."https://github.com/paritytech/cumulus"]
asset-test-utils = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
bridge-hub-kusama-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
bridge-hub-polkadot-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
bridge-hub-rococo-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
collectives-polkadot-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
contracts-rococo-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-cli = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-collator = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-consensus-aura = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-consensus-common = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-network = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-pov-recovery = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-client-service = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-aura-ext = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-dmp-queue = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-parachain-system = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-parachain-system-proc-macro = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-solo-to-para = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-xcm = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-ping = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-primitives-core = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-primitives-timestamp = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-primitives-utility = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-relay-chain-interface = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-test-client = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-test-relay-validation-worker-provider = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-test-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
cumulus-test-service = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
pallet-collator-selection = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
pallet-template = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
parachain-info = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
parachain-template-node = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
parachain-template-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
parachains-common = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
penpal-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
polkadot-parachain-bin = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
rococo-parachain-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
seedling-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
shell-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
statemine-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
statemint-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }
westmint-runtime = { git = "https://github.com/galacticcouncil/cumulus.git", branch = "feat/xcmp-defer-xcm-v9-38" }

# Frame
[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { path = "../../sources/substrate/frame/benchmarking"}
frame-benchmarking-cli = {path = "../../sources/substrate/utils/frame/benchmarking-cli" }
frame-executive = {path = "../../sources/substrate/frame/executive" }
frame-remote-externalities = {path = "../../sources/substrate/utils/frame/remote-externalities" }
frame-support = {path = "../../sources/substrate/frame/support" }
frame-system = {path = "../../sources/substrate/frame/system" }
frame-system-benchmarking = {path = "../../sources/substrate/frame/system/benchmarking" }
frame-system-rpc-runtime-api = {path = "../../sources/substrate/frame/system/rpc/runtime-api" }
frame-try-runtime = {path = "../../sources/substrate/frame/try-runtime" }
sp-api = {path = "../../sources/substrate/primitives/api" }
sp-arithmetic = {path = "../../sources/substrate/primitives/arithmetic" }
sp-authority-discovery = {path = "../../sources/substrate/primitives/authority-discovery" }
sp-block-builder = {path = "../../sources/substrate/primitives/block-builder" }
sp-blockchain = {path = "../../sources/substrate/primitives/blockchain" }
sp-consensus = {path = "../../sources/substrate/primitives/consensus/common" }
sp-consensus-aura = {path = "../../sources/substrate/primitives/consensus/aura" }
sp-core = {path = "../../sources/substrate/primitives/core" }
sp-externalities = {path = "../../sources/substrate/primitives/externalities" }
sp-inherents = {path = "../../sources/substrate/primitives/inherents" }
sp-io = {path = "../../sources/substrate/primitives/io" }
sp-keystore = {path = "../../sources/substrate/primitives/keystore" }
sp-npos-elections = {path = "../../sources/substrate/primitives/npos-elections" }
sp-offchain = {path = "../../sources/substrate/primitives/offchain" }
sp-rpc = {path = "../../sources/substrate/primitives/rpc" }
sp-runtime = {path = "../../sources/substrate/primitives/runtime" }
sp-session = {path = "../../sources/substrate/primitives/session" }
sp-staking = {path = "../../sources/substrate/primitives/staking" }
sp-std = {path = "../../sources/substrate/primitives/std" }
sp-storage = {path = "../../sources/substrate/primitives/storage" }
sp-timestamp = {path = "../../sources/substrate/primitives/timestamp" }
sp-tracing = {path = "../../sources/substrate/primitives/tracing" }
sp-transaction-pool = {path = "../../sources/substrate/primitives/transaction-pool" }
sp-trie = {path = "../../sources/substrate/primitives/trie" }
sp-version = {path = "../../sources/substrate/primitives/version" }
sc-basic-authorship = {path = "../../sources/substrate/client/basic-authorship" }
sc-chain-spec = {path = "../../sources/substrate/client/chain-spec" }
sc-cli = {path = "../../sources/substrate/client/cli" }
sc-client-api = {path = "../../sources/substrate/client/api"}
sc-consensus = {path = "../../sources/substrate/client/consensus/common" }
sc-consensus-aura = {path = "../../sources/substrate/client/consensus/aura" }
sc-executor = {path = "../../sources/substrate/client/executor" }
sc-keystore = {path = "../../sources/substrate/client/keystore" }
sc-network = {path = "../../sources/substrate/client/network" }
sc-network-common = {path = "../../sources/substrate/client/network/common" }
sc-rpc = {path = "../../sources/substrate/client/rpc" }
sc-rpc-api = {path = "../../sources/substrate/client/rpc-api" }
sc-service = {path = "../../sources/substrate/client/service" }
sc-telemetry = {path = "../../sources/substrate/client/telemetry" }
sc-tracing = {path = "../../sources/substrate/client/tracing" }
sc-transaction-pool = {path = "../../sources/substrate/client/transaction-pool" }
sc-transaction-pool-api = {path = "../../sources/substrate/client/transaction-pool/api" }
pallet-aura = {path = "../../sources/substrate/frame/aura" }
pallet-authorship = {path = "../../sources/substrate/frame/authorship" }
pallet-balances = {path = "../../sources/substrate/frame/balances" }
pallet-collective = {path = "../../sources/substrate/frame/collective" }
pallet-elections-phragmen = {path = "../../sources/substrate/frame/elections-phragmen" }
pallet-identity = {path = "../../sources/substrate/frame/identity" }
pallet-multisig = {path = "../../sources/substrate/frame/multisig" }
pallet-preimage = {path = "../../sources/substrate/frame/preimage" }
pallet-proxy = {path = "../../sources/substrate/frame/proxy" }
pallet-scheduler = {path = "../../sources/substrate/frame/scheduler" }
pallet-session = {path = "../../sources/substrate/frame/session" }
pallet-sudo = {path = "../../sources/substrate/frame/sudo" }
pallet-timestamp = {path = "../../sources/substrate/frame/timestamp" }
pallet-tips = {path = "../../sources/substrate/frame/tips" }
pallet-transaction-payment = {path = "../../sources/substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc = {path = "../../sources/substrate/frame/transaction-payment/rpc" }
pallet-transaction-payment-rpc-runtime-api = {path = "../../sources/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-treasury = {path = "../../sources/substrate/frame/treasury"}
pallet-uniques = {path = "../../sources/substrate/frame/uniques" }
pallet-utility = {path = "../../sources/substrate/frame/utility" }
substrate-build-script-utils = {path = "../../sources/substrate/utils/build-script-utils"}
substrate-frame-rpc-system = {path = "../../sources/substrate/utils/frame/rpc/system"}
substrate-prometheus-endpoint = {path = "../../sources/substrate/utils/prometheus"}
substrate-rpc-client = {path = "../../sources/substrate/utils/frame/rpc/client"}
substrate-wasm-builder = {path = "../../sources/substrate/utils/wasm-builder"}
try-runtime-cli = {path = "../../sources/substrate/utils/frame/try-runtime/cli"}
sc-peerset = {path = "../../sources/substrate/client/peerset"}
sp-weights = {path = "../../sources/substrate/primitives/weights"}
sp-state-machine = {path = "../../sources/substrate/primitives/state-machine"}
sp-panic-handler = {path = "../../sources/substrate/primitives/panic-handler"}
sp-wasm-interface = {path = "../../sources/substrate/primitives/wasm-interface"}
sp-runtime-interface = {path = "../../sources/substrate/primitives/runtime-interface"}
sp-debug-derive = {path = "../../sources/substrate/primitives/debug-derive"}
sp-consensus-slots = {path = "../../sources/substrate/primitives/consensus/slots"}
sp-application-crypto = {path = "../../sources/substrate/primitives/application-crypto"}
sp-finality-grandpa = {path = "../../sources/substrate/primitives/finality-grandpa"}
sp-maybe-compressed-blob = {path = "../../sources/substrate/primitives/maybe-compressed-blob"}
sp-keyring = {path = "../../sources/substrate/primitives/keyring"}
sc-utils = {path = "../../sources/substrate/client/utils"}
sc-client-db = {path = "../../sources/substrate/client/db"}
sc-block-builder = {path = "../../sources/substrate/client/block-builder"}
sc-executor-common = {path = "../../sources/substrate/client/executor/common"}
sc-allocator = {path = "../../sources/substrate/client/allocator"}
sc-consensus-slots = {path = "../../sources/substrate/client/consensus/slots"}
sc-sysinfo = {path = "../../sources/substrate/client/sysinfo"}
sc-offchain = {path = "../../sources/substrate/client/offchain"}
sc-executor-wasmtime = {path = "../../sources/substrate/client/executor/wasmtime"}
sc-storage-monitor = {path = "../../sources/substrate/client/storage-monitor"}
fork-tree = {path = "../../sources/substrate/utils/fork-tree"}
#pallet-democracy = {path = "../../sources/substrate/frame/democracy"}